Update README for clarity on permissions and recording commands; bump version to 0.4.0

--- a/kumbuka/daemon/com.kumbuka.monitor.plist
+++ b/kumbuka/daemon/com.kumbuka.monitor.plist
@@ -21,6 +21,8 @@
     <integer>60</integer>
     <key>RunAtLoad</key>
     <true/>
+    <key>ProcessType</key>
+    <string>Interactive</string>
     <key>StandardOutPath</key>
     <string>/tmp/kumbuka/monitor.log</string>
     <key>StandardErrorPath</key>
