--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "kumbuka"
-version = "0.3.1"
+version = "0.4.0"
 description = "Local-first meeting recorder with AI-powered transcription"
 readme = "README.md"
 license = {text = "MIT"}
@@ -25,6 +25,7 @@ dependencies = [
     "numpy>=1.24.0",
     "sounddevice>=0.4.6",
     "httpx>=0.24.0",
+    "pyobjc-framework-eventkit>=12.1",
 ]
 
 [project.urls]
