--- a/kumbuka/daemon/com.kumbuka.monitor.plist
+++ b/kumbuka/daemon/com.kumbuka.monitor.plist
@@ -16,6 +16,8 @@
         <string>__CALENDARS__</string>
         <key>KUMBUKA_PROMPT_MINUTES</key>
         <string>__PROMPT_MINUTES__</string>
+        <key>NOTION_TOKEN</key>
+        <string>__NOTION_TOKEN__</string>
     </dict>
     <key>StartInterval</key>
     <integer>60</integer>
