--- a/kumbuka.env.example
+++ b/kumbuka.env.example
@@ -24,6 +24,13 @@ NOTION_TOKEN=""
 KUMBUKA_FLUIDAUDIO_REPO="~/FluidAudio"
 
 # -----------------------------------------------------------------------------
+# Output Directory
+# -----------------------------------------------------------------------------
+# Where recordings, transcripts, and logs are saved.
+# Default: /tmp/kumbuka
+KUMBUKA_OUTPUT_DIR="/tmp/kumbuka"
+
+# -----------------------------------------------------------------------------
 # Recording & Monitoring
 # -----------------------------------------------------------------------------
 # Maximum recording duration in seconds.
