feat: Enhance Notion integration with structured output, file renaming, and improved configuration handling

--- a/kumbuka.env.example
+++ b/kumbuka.env.example
@@ -4,14 +4,15 @@
 # -----------------------------------------------------------------------------
 # Notion Integration (Optional)
 # -----------------------------------------------------------------------------
-# Mode: "token" (standalone API token) or "mcp" (Claude Code MCP integration)
+# "token" = API token (requires NOTION_TOKEN below)
+# "mcp"   = Claude MCP integration (requires Notion MCP connected in Claude Code)
 KUMBUKA_NOTION_MODE="token"
 
 # URL of the Notion page where meeting notes should be created as subpages.
 # Example: https://www.notion.so/My-Meetings-abc123...
 KUMBUKA_NOTION_URL=""
 
-# Notion Integration Token (Required if mode is "token")
+# Notion Integration Token (required when notion_mode is "token")
 # Create one at https://www.notion.so/profile/integrations
 # Starts with "ntn_"
 NOTION_TOKEN=""
