feat: Refactor output directory handling to use user-defined path for recordings

--- a/kumbuka.env.example
+++ b/kumbuka.env.example
@@ -28,8 +28,8 @@ KUMBUKA_FLUIDAUDIO_REPO="~/FluidAudio"
 # Output Directory
 # -----------------------------------------------------------------------------
 # Where recordings, transcripts, and logs are saved.
-# Default: /tmp/kumbuka
-KUMBUKA_OUTPUT_DIR="/tmp/kumbuka"
+# Default: ~/.kumbuka/recordings
+# KUMBUKA_OUTPUT_DIR="/path/to/your/directory"
 
 # -----------------------------------------------------------------------------
 # Recording & Monitoring
